--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "express": "4.16.4",
     "express-api-token-auth": "1.0.0",
     "express-basic-auth": "1.1.6",
+    "express-ws": "4.0.0",
     "uuid": "3.3.2",
     "yargs": "12.0.5"
   }
