--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     ]
   },
   "dependencies": {
+    "body-parser": "1.19.0",
     "express": "4.16.4",
     "express-api-token-auth": "1.0.0",
     "express-basic-auth": "1.1.6",
